# uclapi

./: .dockerignore  .flake8.ini  .gitignore  .hound.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_SETUP.md  crap.py  deployment_production.sh  deployment_staging.sh  dev.Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  docker-dev.ps1  docker-dev.sh  getting-started-docker.txt  jobslist.md  keys.tar.enc  nginx.Dockerfile  nohup.out  prod.Dockerfile  requirements.txt  uclapi-staging-1.pem.enc  uclapi-staging-2-docker.pem.enc  uclapi.openapi.json
backend/uclapi/: .env.docker.example  .env.example  .flake8.ini  full_cron_cache.sh  gunicorn_config.py  gunicorn_start.sh  manage.py  pyproject.toml  requirements.txt  webpack-stats.sample.json
backend/uclapi/common/: cachet.py  decorators.py  exception_handler.py  helpers.py  pagination.py  tests.py  views.py
backend/uclapi/dashboard/: admin.py  api_applications.py  app_helpers.py  models.py  tasks.py  tests.py  urls.py  views.py  webhook_helpers.py  webhook_views.py
backend/uclapi/devconsole/: apps.py  models.py
backend/uclapi/libcal/: apps.py  serializers.py  tasks.py  tests.py  tests_utils.py  urls.py  utils.py  views.py
backend/uclapi/marketplace/: views.py
backend/uclapi/oauth/: app_helpers.py  decorators.py  models.py  scoping.py  tests.py  urls.py  views.py
backend/uclapi/resources/: urls.py  views.py
backend/uclapi/roombookings/: api_helpers.py  apps.py  custom_test_runner.py  decorators.py  helpers.py  models.py  private_methods.py  tests.py  token_auth.py  urls.py  views.py
backend/uclapi/search/: urls.py  views.py
backend/uclapi/source/: common.rst  conf.py  dashboard.rst  index.rst  libcal.rst  marketplace.rst  oauth.rst  openapi.rst  resources.rst  roombookings.rst  searchEndpoint.rst  timetable.rst  workspaces-historical.rst  workspaces.rst
backend/uclapi/timetable/: amp.py  app_helpers.py  create_models.py  models.py  personal_timetable.py  tasks.py  tests.py  timetable_helpers.py  urls.py  utils.py  views.py
backend/uclapi/uclapi/: UCLAPIAcceptableUsePolicy.txt  __init__.py  celery.py  context_processors.py  custom_test_runner.py  dbrouters.py  decorators.py  ourcelery.py  settings.py  settings_mocked.py  urls.py  utils.py  wsgi.py
backend/uclapi/workspaces/: apps.py  day_cache.sh  decorators.py  image_builder.py  models.py  night_cache.sh  occupeye.py  pagination.py  serializers.py  tasks.py  tests.py  tests_archive.py  tests_archive_cache.json  tests_archive_edge_cache.json  tests_archive_edge_survey_cache.json  tests_cache.json  tests_strings.json  urls.py  views.py
(+715 files in other folders)
